--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,5 +12,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        hbm2ddl:
+          import_files: sql/populate-database.sql
     hibernate:
       ddl-auto: create
