--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,11 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.1'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id ("jacoco")
+}
+
+jacoco {
+	toolVersion = "0.8.7"
 }
 
 group = 'br.com.iug'
@@ -43,4 +48,9 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+
+	testLogging {
+		events "PASSED", "FAILED", "SKIPPED"
+	}
+
 }
