--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/gastos
-    username: root
-    password:
+    url: jdbc:mysql://localhost:3306/expense
+    username: gui
+    password: senha123
   jpa:
     show-sql: true
     properties:
