--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.1'
 	id 'io.spring.dependency-management' version '1.1.0'
-	id ("jacoco")
-}
-
-jacoco {
-	toolVersion = "0.8.7"
+	id 'jacoco'
+	id "org.sonarqube" version "3.5.0.2730"
 }
 
 group = 'br.com.iug'
@@ -54,3 +51,11 @@ tasks.named('test') {
 	}
 
 }
+
+//sonar {
+//	properties {
+//		property "sonar.login", "sqp_0fd22347e2eb85c3a9183e0874185dbdb1856d7c"
+//		property "sonar.host.url", "http://localhost:9000"
+//		property "sonar.projectKey", "expense-control"
+//	}
+//}
