--- a/build.gradle
+++ b/build.gradle
@@ -45,11 +45,37 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 
 	testLogging {
 		events "PASSED", "FAILED", "SKIPPED"
 	}
 
+}
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		xml.enabled true
+		csv.enabled true
+		html.enabled true
+	}
+	finalizedBy jacocoTestCoverageVerification
+}
+//Caso queira que o minimo de cobertura seja bloqueado basta deixar a propriedade true
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			enabled = false
+			limit {
+				minimum = 0.45
+			}
+		}
+	}
+}
+
+jacoco {
+	toolVersion = "0.8.7"
 }
 
 //sonar {
