Adicionando import do classpah para reconhecer o application de dev quando profile for 'dev'

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
         format_sql: true
     hibernate:
       ddl-auto: create
+  config:
+    import: classpath:application-dev.yml
 
 # Default path: /swagger-ui/index.html
 springdoc:
