Adicionando método que não permite a adição de uma parcela de um item que foi criado sem parcela

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/expense
-    username: gui
-    password: senha123
+    username: root
+    password: root
   jpa:
     show-sql: true
     properties:
@@ -15,8 +15,6 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: create
-  config:
-    import: classpath:application-dev.yml
 
 # Default path: /swagger-ui/index.html
 springdoc:
