--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/expense
     username: admin
     password: admin
     driver-class-name: org.postgresql.Driver
@@ -14,7 +14,7 @@ spring:
       hibernate:
         format_sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
 
 # Default path: /swagger-ui/index.html
 springdoc:
